samples/_failures_safe/1761500780_0d6a96_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fbf75ad7.c: In function ‘print_compression_info’:
./samples/SAFE/__tmp_fbf75ad7.c:141:5: error: expected expression at end of input
  141 |     printf("Blocks: %u\n",
      |     ^~~~~~
./samples/SAFE/__tmp_fbf75ad7.c:141:5: error: expected declaration or statement at end of input
